app/styles/refset.styl
blue = #5B83AD
yellow = #FFFFE0

body
  padding 25px
  font-family proxima-nova-1, proxima-nova-2, sans-serif

h1
  font-family : museo-sans-1, museo-sans-2 , Georgia, Verdana, "Bitstream Vera Sans", "DejaVu Sans", Tahoma, Geneva, Arial, Sans-serif !important
  padding-top: 0 !important
  margin-top: 0 !important
  margin-bottom: 0.5em !important
  font-size: 2em !important
  font-weight: bold !important

h2
  font-size: 1.5em !important
  font-weight: bold !important
  font-family : museo-sans-1, museo-sans-2 , Georgia, Verdana, "Bitstream Vera Sans", "DejaVu Sans", Tahoma, Geneva, Arial, Sans-serif !important

h2 .title
  float: left
  margin-top: 0.25em

h3
  font-family : museo-sans-1, museo-sans-2 , Georgia, Verdana, "Bitstream Vera Sans", "DejaVu Sans", Tahoma, Geneva, Arial, Sans-serif
h4
  padding-bottom: 0.5em !important
  font-family proxima-nova-1, proxima-nova-2, sans-serif !important

h4 .title
  float: left
  font-size: 1.25em

ol.breadcrumb
  margin-bottom: 0

.btn.action
  font-family proxima-nova-1, proxima-nova-2, sans-serif

.modal-footer
  margin-top: 0 !important
  margin-bottom: 0;

.modal-footer .form-group
  margin-bottom: 0

#page-header
  height 7em
  img
    width 6em
    float left
  h1
    padding-top 0.5em
    padding-left 3em
    font-family: click-clack-1, click-clack-2, serif
  button
    float right

#plan .terminal
  float: right;

#details h2
  margin: 1em 0;

#details .btn
  min-width: 6em;
  font-size: 12px;

#details .rule .btn
  min-width: 12em;
  font-size: 12px;  

.toggle.btn
  margin-right: 1em !important

.toggle.btn.last
  margin-right: 0 !important

#concepts .take-snap.btn
  float: right
  width: auto
  margin-top: 2em


.concepts .table
  display: inline-table
  

.concepts .table .effectiveOn
  width: 9em
  text-align: right

.concepts .table .id
  width: 9em  
  text-align: right

#plan .rule.list-group-item{
  border: none
  padding-top: 10px;
  padding-bottom: 10px;
}

#plan .select-rule-type.btn
  width: auto

#plan .dropdown.type.has-type
  margin-top: -3em

#plan .btn.terminus
  min-width: 0
  background-color: ghostwhite
  border-left: 0
  font-family : museo-sans-1, museo-sans-2 , Georgia, Verdana, "Bitstream Vera Sans", "DejaVu Sans", Tahoma, Geneva, Arial, Sans-serif

.btn.take-snap.icon
  min-width: 0 !important
  float: right
  padding: 0.3em 0.6em 0.1em 0.65em;
  margin-top: 0.5em

.btn.take-snap.icon .glyphicon
  color: salmon
  font-size: 1.25em  

#plan .rules .rule .btn
  height: 40px

#plan .icon.btn
  min-width: 0
  opacity: 0.8
  font-size: 1.2em;

#plan .edit .btn
  color: black
  opacity: none
  
#plan .rule .btn.delete.empty
  border-left: none

.set.btn-group button, .list .btn-group button
  border-left: 0 !important

.list .description
  border-top-left-radius: 0
  border-bottom-left-radius: 0
  border-left: 0 !important

#plan .icon.btn.edit
  border-right: 0
  border-left: 0
  opacity: 0.75

#plan .icon.btn.add-rule
  background-color: ghostwhite  

#plan .icon.btn.add-rule .glyphicon 
  color: tomato
  font-size: 0.7em !important

#plan .icon.btn.edit .glyphicon
  font-size: 0.9em
  color: #5cb85c
  top: 2px
  opacity: 0.75

#plan .delete.new-rule.icon.btn
  border-left: 0

#plan .delete.icon .glyphicon  
  color: tomato
  font-size: 0.75em
  opacity: 0.75

#plan .concepts .delete.icon .glyphicon  
  font-size: 1em

#plan .concepts .delete.icon
  float: right



#plan .concepts 
  margin-top: 1em

#plan .error.icon.btn
  background-color: tomato

#plan .error.icon.btn .glyphicon  
  color: white

#plan .error-message{
  color: crimson
}

#plan .btn.id
  background-color: ghostwhite
  color: grey
  min-width: 5em

#plan .btn.id.error
  background-color: tomato
  border-color: tomato
  color: white

.refset-actions
  margin-top: -0.9em
  font-family proxima-nova-1, proxima-nova-2, sans-serif

.refset-actions .btn
  float: right

#plan h4, #snapshots h4
  //color: #5cb85c;
  color: lightgray;
  padding: 0
  margin: 0

.modal-header h4
  color: black !important
  font-family : museo-sans-1, museo-sans-2 , Georgia, Verdana, "Bitstream Vera Sans", "DejaVu Sans", Tahoma, Geneva, Arial, Sans-serif !important
  font-weight: bold
  margin-bottom: 0 !important
  margin-top: 0.5em !important

#details .alert
  margin-top: 1em
  margin-bottom: 0.5em
  padding: 8px
  padding-left: 20px
  font-size: 0.9em

#details .alert .dismiss
  float: right
  margin-top: -5px
  color: blue


#plan .rules .modal h3
  color: skyblue;
  margin: 0
  margin-bottom: 0.5em
  margin-top: 0em

#plan .rules .modal h3.find
  margin-bottom: 0


#plan .rules .modal h4
  color: blue;
  //color: darkolivegreen;
  margin: 0

#plan .rules .modal .concepts .list-group-item .close
  color: tomato
  opacity: 0.6
  font-size: 1.2em

#plan .rules .modal .concepts .list-group-item
  padding: 0.5em
  border: none
  font-family: proxima-nova-1, proxima-nova-2, verdana
  color: grey

#plan .rules .modal .mode-action
  width: 100%
  text-align: right

#plan .rules .modal .modal-header
  padding-bottom: 1em
  padding-top: 2.5em  

#plan .rules .modal .modal-body
  padding-top: 0
  padding-bottom: 0

#plan .rules .modal .mode-action .btn
  margin-top: -7em  

#plan .plan-actions
  float: right

#plan .plan-actions .btn
  float: left

#plan .rules .plan-actions .btn.cancel
  float: right

#plan .rules .plan-actions .btn.add-rule
  float: right  
  margin-right: 0.5em

#plan .rules .actions .btn.validate
  margin-right: 0.5em

#snapshot h4.snapshot
  margin-top: -0.75em

#snapshot h4.heading
  color: lightgray
  font-size: 2em
  
  padding-bottom: 0 !important

#snapshot .btn.close-snapshot
  float: right

.concept .btn
  display: block

.concept .btn.has-concept
  float: right

